@@ -5,6 +5,7 @@ NEXT UNRELEASED
 - Increase XML::LibXSLT::max_depth to 10K. BZ #1035525
 - Include entrytbl in cols count. BZ #1069405
 - Add 'td' to translatable blocks list. BZ #1059938
+- Treat entry like para for mixedmode tags. BZ #1039382
 
 4.0.0 Wed Dec 18 2013
 - Support DocBook 5 as input format. BZ #1005042
